update openapi and create api gw
